# Alex_Pablo_Pro

./: .gitignore  README.md  pure_test.py  pyproject.toml  requirements.txt  test_first_test.py  test_login_test_cases.py  test_page.py  test_register_test_cases.py
pages/: base_page.py  selenium1py.py  xwiks_page.py
